--- a/qsl.html
+++ b/qsl.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarTog">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Back</a>
+            <a class="nav-link" href="./index.html">Home</a>
           </li>
         </ul>
       </div>
@@ -69,13 +69,84 @@
 
     <img src="./images/QSLCard2301FrontSamp.webp" class="img-fluid rounded mx-auto d-block" alt="a sample of our QSL card">
     <section class="my-3">
-      <h2 class="py-2">Links</h2>
+      <h2 class="py-2">
+        各网站账号
+        <small class="text-muted" lang="en">Links</small>
+      </h2>
       <div class="list-group">
         <a href="https://www.qrz.com/db/bi1mhk" class="list-group-item list-group-item-action">QRZ.com profile</a>
         <a href="https://www.eQSL.cc/Member.cfm?BI1MHK" class="list-group-item list-group-item-action">eQSL.cc profile</a>
         <a href="http://www.hrdlog.net/log/BI1MHK" class="list-group-item list-group-item-action">HRDLOG.net logbook</a>
-        <a href="https://forum.hamcq.cn/u/3208" class="list-group-item list-group-item-action">HamCQ.cn (Chinese only)</a>
+        <a href="https://hamcq.cn/BI1MHK" class="list-group-item list-group-item-action">HamCQ.cn (Chinese only)</a>
       </div>
+    </section>
+    <section>
+      <section class="my-3">
+        <h2 class="py-2">
+          部分活动记录
+          <small class="text-muted" lang="en">Activities</small>
+        </h2>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2">
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">May 5th Chinese Radio Amateurs Festival's Activity</h5>
+              <p class="card-text" lang="zh-Hans">“5.5 中国业余无线电节”纪念通联活动</p>
+              <p class="card-text" lang="zh-Hans">为庆祝和纪念 2024 年“5·5 中国业余无线电节”，CRAC 于北京时间 2024 年 5 月 3 日 08:00 至 2024 年 5 月 5 日 20:00 主办纪念通联活动，并于活动期间设置分区主台 BnCRA。</p>
+              <p class="card-text">(To be issued)</p>
+              <p class="card-text"><small class="text-body-secondary">May 2024</small></p>
+              <a href="http://www.crac.org.cn/55/" class="card-link">About</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images\award201.jpg" class="card-img-top" alt="">
+            <div class="card-body">
+              <h5 class="card-title">Memorial Victory 79</h5>
+              <p class="card-text" lang="ru">В ознаменование 79-летия Победы над нацизмом, отдавая дань памяти тем, кто защищал нашу Родину на фронтах Великой Отечественной войны и тем, кто ковал нашу Победу в тылу, в знак глубокого уважения и благодарности за их вклад в Победу над нацизмом, принимая во внимание всемирно-историческое значение Победы над нацизмом в Великой Отечественной войне, Союз радиолюбителей России при поддержке Автономной некоммерческой организации Редакция журнала «Радио» проводит в мае 2024 года Мемориал «Победа-79».</p>
+              <p class="card-text"><small class="text-body-secondary">May 2024</small></p>
+              <a href="https://pobeda.srr.ru/" class="card-link">About</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images\award1.jpg" class="card-img-top" alt="">
+            <div class="card-body">
+              <h5 class="card-title">World Amateur Radio Day</h5>
+              <p class="card-text" lang="en">RAAG celebrates the World Amateur Radio Day by activating a Special Event Station with the Special Call Sign <code>SZ0WARD</code> for the time period April 15th to April 30th 2024.</p>
+              <p class="card-text"><small class="text-body-secondary">April 2024</small></p>
+              <a href="https://sv2rck.gr/SZ0WARD" class="card-link">About</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="my-3">
+      <h2 class="py-2">
+        友情链接
+        <small class="text-muted" lang="en">Groups and Friends</small>
+      </h2>
+      <div class="list-group">
+        <a href="https://www.qrz.com/db/BY1QH/" class="list-group-item list-group-item-action">清华大学业余电台 Amateur Radio Station of Tsinghua Univ. <var>BY1QH</var></a>
+        <a href="https://www.qrz.com/db/BY1HT/" class="list-group-item list-group-item-action">北京航空航天大学业余电台 Amateur Radio Station of Beihang Univ. <var>BY1HT</var></a>
+        <a href="https://echoandmoonlight.com" class="list-group-item list-group-item-action">氢氧结合体 HYDROXIDE <var>BI1QGX</var></a>
+        <a href="https://yurihou.github.io/" class="list-group-item list-group-item-action">
+          Yurihou <var>BH9DWE</var>
+          <span class="text-muted" lang="zh-Hans">“QH 内鬼，八木奸商”</span>
+          <span class="text-muted" lang="en">Selling Yagi antennas at only $51.4 each!</span>
+        </a>
+        <a href="https://doublehan07.github.io/" class="list-group-item list-group-item-action">Doublehan07 <var>BI1NWO</var></a>
+      </div>
+    </section>
+    <section class="my-3">
+      <h2 class="py-2">
+        赛博祠堂
+        <small class="text-muted" lang="en">Cyber Temple</small>
+      </h2>
+      <span class="text-muted">by BH9DWE</span>
+      <iframe src="https://yurihou.github.io/temple" class="w-100 border border-primary-subtle" height="400" loading="lazy"></iframe>
     </section>
   </article>
   <div class="container my-2">
