--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-05-14 (v3.8.23)
+        <ul>
+          <li>新增车站：<var>栟茶</var>、<var>大安</var>、<var>二连</var>、<var>固安东</var>、<var>哈达铺</var>、<var>姜堰</var>、<var>陇南</var>、<var>南通</var>、<var>秦王川</var>、<var>三岔湖</var>、<var>图们北</var>、<var>瓦房店</var>、<var>新民</var>、<var>姚渡</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 868 个，机器数量达 2648 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-04-30 (v3.8.22)
         <ul>
           <li>新增车站：<var>花山镇</var>、<var>金口河南</var>、<var>乐同</var>、<var>清城</var>、<var>狮岭</var>、<var>银盏</var>、<var>英德</var>、<var>源潭</var>。</li>
