--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-05-14 (v3.8.23)
+        <ul>
+          <li>新駅：<var>栟茶</var>、<var>大安</var>、<var>二连</var>、<var>固安东</var>、<var>哈达铺</var>、<var>姜堰</var>、<var>陇南</var>、<var>南通</var>、<var>秦王川</var>、<var>三岔湖</var>、<var>图们北</var>、<var>瓦房店</var>、<var>新民</var>、<var>姚渡</var>。</li>
+          <li>記録した駅組 31 個、駅 868 個、機器 2648 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-04-30 (v3.8.22)
         <ul>
           <li>新駅：<var>花山鎮</var>、<var>金口河南</var>、<var>楽同</var>、<var>清城</var>、<var>狮嶺</var>、<var>銀盏</var>、<var>英徳</var>、<var>源潭</var>。</li>
