--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -87,13 +87,13 @@
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
       <tr><td>1</td><td>郑州东</td><td>68</td><td>94</td></tr>
       <tr><td>2</td><td>南京南</td><td>57</td><td>86</td></tr>
-      <tr><td>3</td><td>长春</td><td>54</td><td>69</td></tr>
+      <tr><td>3</td><td>长春</td><td>55</td><td>71</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>73</td></tr>
       <tr><td>5</td><td>北京南</td><td>50</td><td>59</td></tr>
-      <tr><td>6</td><td>盐城</td><td>38</td><td>48</td></tr>
+      <tr><td>6</td><td>盐城</td><td>38</td><td>50</td></tr>
       <tr><td>7</td><td>北京西</td><td>37</td><td>48</td></tr>
       <tr><td>8</td><td>杭州东</td><td>36</td><td>42</td></tr>
-      <tr><td>9</td><td>兰州</td><td>32</td><td>45</td></tr>
+      <tr><td>9</td><td>兰州</td><td>32</td><td>46</td></tr>
       <tr><td>10</td><td>徐州东</td><td>32</td><td>41</td></tr>
     </table>
   </div>
@@ -139,10 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-04-30 (v3.8.22)
+        2024-05-14 (v3.8.23)
         <ul>
-          <li>新增车站：<var>花山镇</var>、<var>金口河南</var>、<var>乐同</var>、<var>清城</var>、<var>狮岭</var>、<var>银盏</var>、<var>英德</var>、<var>源潭</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 855 个，机器数量达 2620 台。</li>
+          <li>新增车站：<var>栟茶</var>、<var>大安</var>、<var>二连</var>、<var>固安东</var>、<var>哈达铺</var>、<var>姜堰</var>、<var>陇南</var>、<var>南通</var>、<var>秦王川</var>、<var>三岔湖</var>、<var>图们北</var>、<var>瓦房店</var>、<var>新民</var>、<var>姚渡</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 868 个，机器数量达 2648 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
