--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,14 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-05-30 (v3.8.24)
+        <ul>
+          <li>券紙“<var>蓝报销凭证（黑体居中，2023年新型）票纸</var>”を説明。</li>
+          <li>新駅：<var>安州</var>、<var>長流</var>、<var>富裕</var>、<var>高川</var>、<var>龍塘鎮</var>、<var>绵竹南</var>、<var>上海松江</var>、<var>松江北</var>。</li>
+          <li>記録した駅組 31 個、駅 877 個、機器 2678 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-05-14 (v3.8.23)
         <ul>
           <li>新駅：<var>栟茶</var>、<var>大安</var>、<var>二连</var>、<var>固安东</var>、<var>哈达铺</var>、<var>姜堰</var>、<var>陇南</var>、<var>南通</var>、<var>秦王川</var>、<var>三岔湖</var>、<var>图们北</var>、<var>瓦房店</var>、<var>新民</var>、<var>姚渡</var>。</li>
