--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -54,7 +54,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 4 月 30 日版本</a></p>
+    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 5 月 30 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -139,10 +139,11 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-05-14 (v3.8.23)
+        2024-05-30 (v3.8.24)
         <ul>
-          <li>新增车站：<var>栟茶</var>、<var>大安</var>、<var>二连</var>、<var>固安东</var>、<var>哈达铺</var>、<var>姜堰</var>、<var>陇南</var>、<var>南通</var>、<var>秦王川</var>、<var>三岔湖</var>、<var>图们北</var>、<var>瓦房店</var>、<var>新民</var>、<var>姚渡</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 868 个，机器数量达 2648 台。</li>
+          <li>新增了票纸“<var>蓝报销凭证（黑体居中，2023年新型）票纸</var>”的细分种类。</li>
+          <li>新增车站：<var>安州</var>、<var>长流</var>、<var>富裕</var>、<var>高川</var>、<var>龙塘镇</var>、<var>绵竹南</var>、<var>上海松江</var>、<var>松江北</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 877 个，机器数量达 2678 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
