Update QSL data

--- a/qsl.html
+++ b/qsl.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdn.staticfile.net/bootstrap/5.2.3/css/bootstrap.min.css">
   <script src="https://cdn.staticfile.net/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
   <style>
-    body{padding-top:4em;}.heimu,.heimu a{background-color:#222;color:#222}a.promo{word-break: break-all}
+    body{padding-top:4em;}.heimu,.heimu a{background-color:#222;color:#222}a.promo{word-break: break-all}rt{font-size: 0.75em;}
   </style>
 </head>
 
@@ -63,11 +63,63 @@
     <p class="text-muted" lang="en">Speaking Chinese (Mandarin or Foochowese), English or Japanese. You may write in any of the three languages. Please, do not use a translator if you are speaking them. (If you do need one, please have your text in original language attached.)</p>
     <p class="text-muted" lang="ja">中国語・英語と日本語を使えます。日本語のメールは歓迎！仮名より漢字を推奨ですけど…</p>
 
-    <p lang="zh-Hans">以下是在用的 QSL 卡片样式，欢迎交换电子或纸质卡片（FT8、中继均可）！纸质卡片将由 <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> (<a href="https://forum.hamcq.cn/u/1167">hamcq.cn</a>) 处理。</p>
-    <p class="text-muted" lang="en">The following is the QSL card style in use. Exchanges of QSL card (either paper, E-mail or eQSL) are welcomed, in any mode including FT8 or through FM repeaters. Paper cards are processed by <a href="https://www.qrz.com/db/BY1HT">BY1HT</a>.</p>
-    <p class="text-muted" lang="ja">以下は使っているQSLカードのスタイルです。電子カードや紙カード・記念カードの交換を歓迎します！郵便は <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> に送ってください。</p>
+    <p lang="zh-Hans">
+      以下是在用的 QSL 卡片样式，欢迎交换电子或纸质卡片（FT8、中继均可）！
+      <ul>
+        <li>直邮：邮件将由 <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> (<a href="https://forum.hamcq.cn/u/1167">hamcq.cn</a>) 处理。地址见下。收到均会回复，可能会有一两个月的延迟。无需夹寄现金、邮票或回邮券。正在收集邮戳，欢迎各种稀有邮戳。收到的邮件、邮票等会被精心扫描、保存。</li>
+        <li>卡片局：BY 卡片局一年仅分发一次卡片，通过卡片局交换卡片可能需要数年的时间。敬请理解。</li>
+        <li>E-mail: bi1mhk*outlook.com （请将 * 替换为 @）</li>
+        <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>：每周更新数次。暂无自定义卡面。（仅当服务可用时，下同）</li>
+        <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>, <a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>：至少每周更新。有自定义卡面。</li>
+        <li><a href="http://clublog.org">clublog.org</a>：网络访问较为困难，尽力每月更新。支持 OQRS，但不建议使用。</li>
+      </ul>
+    </p>
+    <p class="text-muted" lang="en">
+      The following is the QSL card style in use. Exchanges of QSL card (either paper, E-mail or eQSL) are welcomed, in any mode including FT8 or through FM repeaters.
+      <ul class="text-muted">
+        <li>Paper cards via direct: Post mails and parcels are processed by <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> addressed below. Once received I will reply within 1~2 months. No cash, stamp or IRC required. I'm happy collecting stamps and postmarks, and incoming mails will be carefully scaned and stored.</li>
+        <li>Via bureau: The BY bureau only distributes cards once a year, so exchanging cards via BURO may take several years. Better e-mail me first if you would like to exchange.</li>
+        <li>E-mail: bi1mhk*outlook.com (Replace * with @)</li>
+        <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>: Upload several times a week. No custom style available. (Only when services online, same below)</li>
+        <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>, <a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>: Upload once a week or more. Custom style available.</li>
+        <li><a href="http://clublog.org">clublog.org</a>: Try to upload at least once a month, because of network reasons. OQRS supported but not recommended.</li>
+      </ul>
+    </p>
+    <p class="text-muted" lang="ja">
+      以下は使っているQSLカードのスタイルです。電子カードや紙カード・記念カードの交換を歓迎します！
+      <ul class="text-muted">
+        <li><ruby>直接郵送<rt>Direct</rt></ruby>：郵便は <a href="https://www.qrz.com/db/BY1HT">BY1HT</a> に送ってください。宛先は下にご参照ください。現金・切手・<ruby>国際返信切手券<rt>International Reply Coupon</rt></ruby>など必要ありません。消印などを収集しているので、珍しい消印を歓迎します。受け取った郵便物や切手は丁寧にスキャンされ、保存されます。</li>
+        <li>ビューロー：BY ビューローは年一回しか出荷しておらず、ビューローでカード交換には数年掛かる可能性があります。ご理解ありがとうございます。</li>
+        <li>E-mail: bi1mhk*outlook.com (* を @ へ)</li>
+        <li>LoTW, <a href="https://www.eQSL.cc/Member.cfm?BI1MHK">eQSL.cc</a>, <a href="https://www.qrz.com/db/bi1mhk">QRZ.com</a>：週に数回更新します。カスタムカードスタイルはありません。（サービスが利用可能な場合のみ、以下同じ）</li>
+        <li><a href="http://www.hrdlog.net/log/BI1MHK">HRDLOG.net (Ham365)</a>, <a href="https://hamlog.online/">hamlog.online (hamlog.ru)</a>：週に一回更新します。カスタムカードスタイルはあります。</li>
+        <li><a href="http://clublog.org">clublog.org</a>：ネットワークの原因で、毎月更新できるように努めています。OQRSはサポートされていますが、推奨されていません。</li>
+      </ul>
+    </p>
 
     <img src="./images/QSLCard2301FrontSamp.webp" class="img-fluid rounded mx-auto d-block" alt="a sample of our QSL card">
+
+    <section class="my-3">
+      <h2 class="py-2">
+        邮政地址
+        <small class="text-muted" lang="en">Post address</small>
+      </h2>
+      <address>
+        北京市 昌平区 沙河高教园 南三街9号 北京航空航天大学沙河校区<br />
+        北航业余无线电协会 收<br />
+        102206
+      </address>
+      <br />
+      <address lang="en">
+        BUAA Amaetur Radio Association<br />
+        Beihang University Shahe Campus, Shahe University Park<br />
+        Changping District, Beijing 102206<br />
+        China
+      </address>
+      <div class="alert alert-info" lang="en">If possible, printing Chinese address above and appending English word "China" to it will improve mail process efficiency and lead to less mistakes.</div>
+      <div class="alert alert-info" lang="ja">宛先は漢字で書けば郵便の処理効率が向上します。</div>
+    </section>
+
     <section class="my-3">
       <h2 class="py-2">
         各网站账号
@@ -138,6 +190,7 @@
           <span class="text-muted" lang="en">Selling Yagi antennas at only $51.4 each!</span>
         </a>
         <a href="https://doublehan07.github.io/" class="list-group-item list-group-item-action">Doublehan07 <var>BI1NWO</var></a>
+        <a href="https://www.qrz.com/db/BG7TNB/" class="list-group-item list-group-item-action">广西师范大学业余电台 Amateur Radio Station of Guangxi Normal Univ. <var>BG7TNB</var></a>
       </div>
     </section>
     <section class="my-3">
