--- a/qsl.html
+++ b/qsl.html
@@ -6,12 +6,8 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!--Polyfills BEGIN-->
-  <script nomodule src="https://cdn.staticfile.net/es5-shim/4.6.7/es5-shim.min.js"></script>
-  <script nomodule src="https://cdn.staticfile.net/es5-shim/4.6.7/es5-sham.min.js"></script>
-  <!--Polyfills END-->
-  <link rel="stylesheet" href="https://cdn.staticfile.net/bootstrap/5.2.3/css/bootstrap.min.css">
-  <script src="https://cdn.staticfile.net/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  <script src="https://unpkg.com/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
   <style>
     body{padding-top:4em;}.heimu,.heimu a{background-color:#222;color:#222}a.promo{word-break: break-all}rt{font-size: 0.75em;}
   </style>
