--- a/rail/Histtip.html
+++ b/rail/Histtip.html
@@ -1,49 +1,58 @@
 <!DOCTYPE html>
-<html lang="zh-Hans-CN">
+<html lang="zh-Hans">
 
 <head>
   <title>运转大数据 ｜ 提示</title>
+  <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="keyword" content="运转大数据" />
-  <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/fontawesome.min.css">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/solid.min.css">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.13.1/css/brands.min.css">
-  <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.staticfile.org/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  <script src="https://unpkg.com/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
   <style>
-    body{padding-top:4em;}img.ptimg{width:300px;max-width:100%;height:auto}p.score span.s0lt1,p.score span.s1lt1{color:red!important}p.score span.s1lt2,p.score span.s2lt1,p.score span.s2lt2,p.score span.s3lt1,p.score span.s4lt2{color:#ff0!important}p.score span.s4lt1,p.score span.s5lt1{color:#3f3!important}p.score span.s0lt2,p.score span.s3lt2,p.score span.s5lt2{color:transparent!important}
+    body{padding-top:4em;}
   </style>
 </head>
 
 <body>
   <a id="top"></a>
-  <nav class="navbar navbar-expand-sm fixed-top navbar-light" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="./tktmach_latest.html">运转大数据</a>
-    <span class="navbar-text"> By Kina(木菜)</span>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="./tktGener.html">生成器</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" href="#">关于</a>
-      </li>
-    </ul>
+  <nav class="navbar navbar-expand-sm fixed-top" style="background-color: #e3f2fd;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="./tktmach_latest.html">运转大数据</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTog" aria-controls="navbarTog" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTog">
+        <span class="navbar-text"> By Kina(木菜)</span>
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="./tktmach_latest.html">返回</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./tktGener.html">生成器</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./tktAbout.html">关于</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </nav>
-  <div class="container head">
-    <p>推荐使用Mdict词典版本，查询更方便。</p>
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
-  </div>
-  <div class="container">
+  <div class="container my-3">
     <p>
-      <span lang="zh">本网站的历史回溯功能缺失。如需访问历史数据，请访问项目仓库或联系管理员：</span>
-      <span lang="en" class="text-muted">The history data is missing in this site. For more historical data, please refer to the repo of this site or contact the authors:</span>
+      <span lang="zh">本网站的历史回溯到此为止。如需访问历史数据，请访问项目仓库或联系管理员。</span>
+      <span lang="en" class="text-muted">This is the end of the history of this site. For more historical data, please refer to the repo of this site or contact the authors.</span>
     </p>
+  </div>
+  <div class="container my-3">
+    项目网址：
     <a href="https://clzls.github.io/rail/tktmach_latest.html">
       https://clzls.github.io/rail/tktmach_latest.html
     </a>
   </div>
+  <footer class="container my-3">
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="知识共享许可协议" style="border-width:0;" src="./img/ccbync.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。
+  </footer>
 </body>
 
 </html>
