--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -6,8 +6,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="keyword" content="运转大数据" />
-  <link rel="stylesheet" href="https://cdn.staticfile.net/bootstrap/5.2.3/css/bootstrap.min.css">
-  <script src="https://cdn.staticfile.net/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  <script src="https://unpkg.com/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
   <style>
     body{padding-top:4em;}img.ptimg{width:300px;max-width:100%;height:auto}p.score span.s0lt1,p.score span.s1lt1{color:red!important}p.score span.s1lt2,p.score span.s2lt1,p.score span.s2lt2,p.score span.s3lt1,p.score span.s4lt2{color:#ff0!important}p.score span.s4lt1,p.score span.s5lt1{color:#3f3!important}p.score span.s0lt2,p.score span.s3lt2,p.score span.s5lt2{color:transparent!important}
   </style>
@@ -70,6 +70,14 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-06-30 (v3.8.25)
+        <ul>
+          <li>紧急更换了受供应链攻击影响的 CDN。</li>
+          <li>新增车站：<var>陈村</var>、<var>东城南</var>、<var>富顺</var>、<var>广州莲花山</var>、<var>广州长隆</var>、<var>隆昌</var>、<var>隆昌北</var>、<var>内江</var>、<var>内江北</var>、<var>番禺</var>、<var>蓬溪</var>、<var>青白江东</var>、<var>沙湾南</var>、<var>渭南</var>、<var>沿滩</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 892 个，机器数量达 2722 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-05-30 (v3.8.24)
         <ul>
           <li>新增了票纸“<var>蓝报销凭证（黑体居中，2023年新型）票纸</var>”的细分种类。</li>
