--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -6,8 +6,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="keyword" content="运转大数据, 運転マスデータ, Yùnzhuǎn Dà-shùjù, Big Data for Train Travel in China" />
-  <link rel="stylesheet" href="https://cdn.staticfile.net/bootstrap/5.2.3/css/bootstrap.min.css">
-  <script src="https://cdn.staticfile.net/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  <script src="https://unpkg.com/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
   <style>
     body{padding-top:4em;}img.ptimg{width:300px;max-width:100%;height:auto}p.score span.s0lt1,p.score span.s1lt1{color:red!important}p.score span.s1lt2,p.score span.s2lt1,p.score span.s2lt2,p.score span.s3lt1,p.score span.s4lt2{color:#ff0!important}p.score span.s4lt1,p.score span.s5lt1{color:#3f3!important}p.score span.s0lt2,p.score span.s3lt2,p.score span.s5lt2{color:transparent!important}
   </style>
@@ -61,6 +61,14 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-06-30 (v3.8.25)
+        <ul>
+          <li>サプライチェーン攻撃の影響を受けたCDNを緊急撤去しました。</li>
+          <li>新駅：<var>陳村</var>、<var>東城南</var>、<var>富顺</var>、<var>広州莲花山</var>、<var>広州長隆</var>、<var>隆昌</var>、<var>隆昌北</var>、<var>内江</var>、<var>内江北</var>、<var>番禺</var>、<var>蓬溪</var>、<var>青白江東</var>、<var>沙湾南</var>、<var>渭南</var>、<var>沿滩</var>。</li>
+          <li>記録した駅組 31 個、駅 892 個、機器 2722 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-05-30 (v3.8.24)
         <ul>
           <li>券紙“<var>蓝报销凭证（黑体居中，2023年新型）票纸</var>”を説明。</li>
@@ -71,7 +79,7 @@
       <li class="list-group-item">
         2024-05-14 (v3.8.23)
         <ul>
-          <li>新駅：<var>栟茶</var>、<var>大安</var>、<var>二连</var>、<var>固安东</var>、<var>哈达铺</var>、<var>姜堰</var>、<var>陇南</var>、<var>南通</var>、<var>秦王川</var>、<var>三岔湖</var>、<var>图们北</var>、<var>瓦房店</var>、<var>新民</var>、<var>姚渡</var>。</li>
+          <li>新駅：<var>栟茶</var>、<var>大安</var>、<var>二连</var>、<var>固安東</var>、<var>哈达铺</var>、<var>姜堰</var>、<var>陇南</var>、<var>南通</var>、<var>秦王川</var>、<var>三岔湖</var>、<var>圖们北</var>、<var>瓦房店</var>、<var>新民</var>、<var>姚渡</var>。</li>
           <li>記録した駅組 31 個、駅 868 個、機器 2648 個。</li>
         </ul>
       </li>
