--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -8,16 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="keyword" content="运转大数据">
   <meta name="description" content="运转大数据，售票机使用体验">
-  <!--Polyfills BEGIN-->
+  <!--Polyfills BEGIN--><!--
   <script nomodule src="https://cdn.staticfile.net/es5-shim/4.6.7/es5-shim.min.js"></script>
-  <script nomodule src="https://cdn.staticfile.net/es5-shim/4.6.7/es5-sham.min.js"></script>
+  <script nomodule src="https://cdn.staticfile.net/es5-shim/4.6.7/es5-sham.min.js"></script>-->
   <!--Polyfills END-->
   <!--<link rel="stylesheet" href="./js/bootstrap.min.css">-->
-  <link rel="stylesheet" href="https://cdn.staticfile.net/bootstrap/5.2.3/css/bootstrap.min.css">
-  <link rel="preload" href="https://cdn.staticfile.net/font-awesome/6.4.0/js/solid.min.js" type="text/javascript" as="script">
-  <link rel="preload" href="https://cdn.staticfile.net/font-awesome/6.4.0/js/brands.min.js" type="text/javascript" as="script">
-  <link rel="preload" href="https://cdn.staticfile.net/font-awesome/6.4.0/js/fontawesome.min.js" type="text/javascript" as="script">
-  <script src="https://cdn.staticfile.net/bootstrap/5.2.3/js/bootstrap.bundle.min.js" defer></script>
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  <link rel="preload" href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.0/js/solid.min.js" type="text/javascript" as="script">
+  <link rel="preload" href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.0/js/brands.min.js" type="text/javascript" as="script">
+  <link rel="preload" href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.0/js/fontawesome.min.js" type="text/javascript" as="script">
+  <script src="https://unpkg.com/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
   <script src="./js/tkt_type.min.js"></script>
   <!-- Nim BEGIN -->
   <link rel="preload" href="./js/aboutPage.min.js" type="text/javascript" as="script">
@@ -54,7 +54,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 5 月 30 日版本</a></p>
+    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 6 月 30 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -77,21 +77,21 @@
     <script src="./js/aboutPageData.min.js" defer></script>
     <article class="container m-1" id="react_container_persons"></article>
     <script src="./js/aboutPage.min.js" defer></script>
-    <script defer src="https://cdn.staticfile.net/font-awesome/6.4.0/js/solid.min.js"></script>
-    <script defer src="https://cdn.staticfile.net/font-awesome/6.4.0/js/brands.min.js"></script>
-    <script defer src="https://cdn.staticfile.net/font-awesome/6.4.0/js/fontawesome.min.js"></script>
+    <script defer src="https://unpkg.com/@fortawesome/fontawesome-free@6.4.0/js/solid.min.js"></script>
+    <script defer src="https://unpkg.com/@fortawesome/fontawesome-free@6.4.0/js/brands.min.js"></script>
+    <script defer src="https://unpkg.com/@fortawesome/fontawesome-free@6.4.0/js/fontawesome.min.js"></script>
   </div>
   <div class="container my-3">
     <h2>趋势榜 <small class="text-muted" lang="en">Trend List</small></h2>
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-      <tr><td>1</td><td>郑州东</td><td>68</td><td>94</td></tr>
+      <tr><td>1</td><td>郑州东</td><td>71</td><td>97</td></tr>
       <tr><td>2</td><td>南京南</td><td>57</td><td>86</td></tr>
       <tr><td>3</td><td>长春</td><td>55</td><td>71</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>73</td></tr>
-      <tr><td>5</td><td>北京南</td><td>50</td><td>59</td></tr>
-      <tr><td>6</td><td>盐城</td><td>38</td><td>50</td></tr>
-      <tr><td>7</td><td>北京西</td><td>37</td><td>48</td></tr>
+      <tr><td>5</td><td>北京南</td><td>50</td><td>60</td></tr>
+      <tr><td>6</td><td>北京西</td><td>39</td><td>50</td></tr>
+      <tr><td>7</td><td>盐城</td><td>38</td><td>50</td></tr>
       <tr><td>8</td><td>杭州东</td><td>36</td><td>42</td></tr>
       <tr><td>9</td><td>兰州</td><td>32</td><td>46</td></tr>
       <tr><td>10</td><td>徐州东</td><td>32</td><td>41</td></tr>
@@ -139,11 +139,11 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-05-30 (v3.8.24)
+        2024-06-30 (v3.8.25)
         <ul>
-          <li>新增了票纸“<var>蓝报销凭证（黑体居中，2023年新型）票纸</var>”的细分种类。</li>
-          <li>新增车站：<var>安州</var>、<var>长流</var>、<var>富裕</var>、<var>高川</var>、<var>龙塘镇</var>、<var>绵竹南</var>、<var>上海松江</var>、<var>松江北</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 877 个，机器数量达 2678 台。</li>
+          <li>紧急更换了受供应链攻击影响的 CDN。</li>
+          <li>新增车站：<var>陈村</var>、<var>东城南</var>、<var>富顺</var>、<var>广州莲花山</var>、<var>广州长隆</var>、<var>隆昌</var>、<var>隆昌北</var>、<var>内江</var>、<var>内江北</var>、<var>番禺</var>、<var>蓬溪</var>、<var>青白江东</var>、<var>沙湾南</var>、<var>渭南</var>、<var>沿滩</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 892 个，机器数量达 2722 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
