--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-07-17 (v3.8.26)
+        <ul>
+          <li>新增车站：<var>东丰</var>、<var>东环</var>、<var>甘洛南</var>、<var>官桥北</var>、<var>开福寺</var>、<var>泥溪</var>、<var>山海关</var>、<var>新化</var>、<var>兴文</var>、<var>越西</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 902 个，机器数量达 2754 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-06-30 (v3.8.25)
         <ul>
           <li>紧急更换了受供应链攻击影响的 CDN。</li>
