--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-07-17 (v3.8.26)
+        <ul>
+          <li>新駅：<var>東丰</var>、<var>東环</var>、<var>甘洛南</var>、<var>官桥北</var>、<var>開福寺</var>、<var>泥溪</var>、<var>山海関</var>、<var>新化</var>、<var>興文</var>、<var>越西</var>。</li>
+          <li>記録した駅組 31 個、駅 902 個、機器 2754 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-06-30 (v3.8.25)
         <ul>
           <li>サプライチェーン攻撃の影響を受けたCDNを緊急撤去しました。</li>
@@ -93,7 +100,7 @@
       <li class="list-group-item">
         2024-04-16 (v3.8.21)
         <ul>
-          <li>新駅：<var>荆州</var>、<var>酒泉</var>、<var>楽山北</var>、<var>威遠</var>、<var>野三关</var>、<var>資中西</var>。</li>
+          <li>新駅：<var>荆州</var>、<var>酒泉</var>、<var>楽山北</var>、<var>威遠</var>、<var>野三関</var>、<var>資中西</var>。</li>
           <li>記録した駅組 31 個、駅 847 個、機器 2600 個。</li>
         </ul>
       </li>
@@ -246,7 +253,7 @@
         <ul>
           <li>「券紙統計」を導入。自動的に生成されたので、ご参考まで。</li>
           <li>券紙、タグ、状態変化などに関する一部の表記を調整。</li>
-          <li>新しい駅：<var>城固</var>、<var>恩平</var>、<var>个旧</var>、<var>鹤壁東</var>、<var>紅島</var>、<var>紅河</var>、<var>鄠邑</var>、<var>淮安</var>、<var>绩溪県</var>、<var>剑門関</var>、<var>开平南</var>、<var>楽平市</var>、<var>墨江</var>、<var>宁洱</var>、<var>攀枝花南</var>、<var>邳州東</var>、<var>屏辺</var>、<var>祁門</var>、<var>青铜峡</var>、<var>渠県</var>、<var>歙県</var>、<var>四合永</var>、<var>台前</var>、<var>西安西</var>、<var>西昌西</var>、<var>萧県北</var>、<var>宣城</var>、<var>陽平関</var>、<var>榆次</var>、<var>元江</var>、<var>治江</var>。</li>
+          <li>新しい駅：<var>城固</var>、<var>恩平</var>、<var>个旧</var>、<var>鹤壁東</var>、<var>紅島</var>、<var>紅河</var>、<var>鄠邑</var>、<var>淮安</var>、<var>绩溪県</var>、<var>剑門関</var>、<var>開平南</var>、<var>楽平市</var>、<var>墨江</var>、<var>宁洱</var>、<var>攀枝花南</var>、<var>邳州東</var>、<var>屏辺</var>、<var>祁門</var>、<var>青铜峡</var>、<var>渠県</var>、<var>歙県</var>、<var>四合永</var>、<var>台前</var>、<var>西安西</var>、<var>西昌西</var>、<var>萧県北</var>、<var>宣城</var>、<var>陽平関</var>、<var>榆次</var>、<var>元江</var>、<var>治江</var>。</li>
           <li>記録した駅組 30 個、駅 740 個、機器 2111 個。</li>
         </ul>
       </li>
