--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -139,11 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-06-30 (v3.8.25)
+        2024-07-17 (v3.8.26)
         <ul>
-          <li>紧急更换了受供应链攻击影响的 CDN。</li>
-          <li>新增车站：<var>陈村</var>、<var>东城南</var>、<var>富顺</var>、<var>广州莲花山</var>、<var>广州长隆</var>、<var>隆昌</var>、<var>隆昌北</var>、<var>内江</var>、<var>内江北</var>、<var>番禺</var>、<var>蓬溪</var>、<var>青白江东</var>、<var>沙湾南</var>、<var>渭南</var>、<var>沿滩</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 892 个，机器数量达 2722 台。</li>
+          <li>新增车站：<var>东丰</var>、<var>东环</var>、<var>甘洛南</var>、<var>官桥北</var>、<var>开福寺</var>、<var>泥溪</var>、<var>山海关</var>、<var>新化</var>、<var>兴文</var>、<var>越西</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 902 个，机器数量达 2754 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
