Update qsl page

--- a/qsl.html
+++ b/qsl.html
@@ -137,11 +137,11 @@
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2">
         <div class="col">
           <div class="card h-100">
+            <img src="images\award2.webp" class="card-img-top" alt="certificate of CARFA 2024">
             <div class="card-body">
               <h5 class="card-title">May 5th Chinese Radio Amateurs Festival's Activity</h5>
               <p class="card-text" lang="zh-Hans">“5.5 中国业余无线电节”纪念通联活动</p>
               <p class="card-text" lang="zh-Hans">为庆祝和纪念 2024 年“5·5 中国业余无线电节”，CRAC 于北京时间 2024 年 5 月 3 日 08:00 至 2024 年 5 月 5 日 20:00 主办纪念通联活动，并于活动期间设置分区主台 BnCRA。</p>
-              <p class="card-text">(To be issued)</p>
               <p class="card-text"><small class="text-body-secondary">May 2024</small></p>
               <a href="http://www.crac.org.cn/55/" class="card-link">About</a>
             </div>
@@ -149,7 +149,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="images\award201.jpg" class="card-img-top" alt="">
+            <img src="images\award201.jpg" class="card-img-top" alt="certificate of Memorial Victory 79">
             <div class="card-body">
               <h5 class="card-title">Memorial Victory 79</h5>
               <p class="card-text" lang="ru">В ознаменование 79-летия Победы над нацизмом, отдавая дань памяти тем, кто защищал нашу Родину на фронтах Великой Отечественной войны и тем, кто ковал нашу Победу в тылу, в знак глубокого уважения и благодарности за их вклад в Победу над нацизмом, принимая во внимание всемирно-историческое значение Победы над нацизмом в Великой Отечественной войне, Союз радиолюбителей России при поддержке Автономной некоммерческой организации Редакция журнала «Радио» проводит в мае 2024 года Мемориал «Победа-79».</p>
@@ -170,6 +170,27 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="my-3">
+      <h2 class="py-2">
+        设备与天线
+        <small class="text-muted" lang="en">RIG &amp; ANT</small>
+      </h2>
+      <p lang="zh-Hans">
+        设备：国赫 PMR-171，短波 14.9W / UV 段最大 25W 工作。
+        天线：U2V2 八木天线，车载天线（UV）；品川天线（HF）以及其他临时架设的天线。
+        时常进行客席发射操作，包括协谷、FlexRadio 等各类设备、天线。
+      </p>
+      <p class="text-muted" lang="en">
+        RIG: Guohe PMR-171, licensed to transmit less than 14.9W (on HF) and 25W (on U/V).
+        ANT: U2V2 Yagi, vehicle-mounted GP (UV), GAWANT (HF) and other portable antennas.
+      </p>
+      <p lang="zh-Hans">
+        时常进行客席发射操作，借用包括协谷、FlexRadio 等各类设备、天线。
+      </p>
+      <p class="text-muted" lang="en">
+        Often operated as guest, using Xiegu, FlexRadio and many other RIGs or ANTs owned by friends.
+      </p>
     </section>
     <section class="my-3">
       <h2 class="py-2">
