--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-07-31 (v3.8.27)
+        <ul>
+          <li>新增车站：<var>保定</var>、<var>北滘西</var>、<var>红果</var>、<var>江北机场</var>、<var>顺德北</var>、<var>武隆</var>、<var>扬州东</var>、<var>银花</var>、<var>岳阳</var>、<var>张槎</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 912 个，机器数量达 2772 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-07-17 (v3.8.26)
         <ul>
           <li>新增车站：<var>东丰</var>、<var>东环</var>、<var>甘洛南</var>、<var>官桥北</var>、<var>开福寺</var>、<var>泥溪</var>、<var>山海关</var>、<var>新化</var>、<var>兴文</var>、<var>越西</var>。</li>
