--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,9 +61,16 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-07-31 (v3.8.27)
+        <ul>
+          <li>新駅：<var>保定</var>、<var>北滘西</var>、<var>紅果</var>、<var>江北機場</var>（重慶江北国際空港）、<var>顺徳北</var>、<var>武隆</var>、<var>扬州東</var>、<var>銀花</var>、<var>岳陽</var>、<var>張槎</var>。</li>
+          <li>記録した駅組 31 個、駅 912 個、機器 2772 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-07-17 (v3.8.26)
         <ul>
-          <li>新駅：<var>東丰</var>、<var>東环</var>、<var>甘洛南</var>、<var>官桥北</var>、<var>開福寺</var>、<var>泥溪</var>、<var>山海関</var>、<var>新化</var>、<var>興文</var>、<var>越西</var>。</li>
+          <li>新駅：<var>東丰</var>、<var>東环</var>、<var>甘洛南</var>、<var>官橋北</var>、<var>開福寺</var>、<var>泥溪</var>、<var>山海関</var>、<var>新化</var>、<var>興文</var>、<var>越西</var>。</li>
           <li>記録した駅組 31 個、駅 902 個、機器 2754 個。</li>
         </ul>
       </li>
@@ -86,7 +93,7 @@
       <li class="list-group-item">
         2024-05-14 (v3.8.23)
         <ul>
-          <li>新駅：<var>栟茶</var>、<var>大安</var>、<var>二连</var>、<var>固安東</var>、<var>哈达铺</var>、<var>姜堰</var>、<var>陇南</var>、<var>南通</var>、<var>秦王川</var>、<var>三岔湖</var>、<var>圖们北</var>、<var>瓦房店</var>、<var>新民</var>、<var>姚渡</var>。</li>
+          <li>新駅：<var>栟茶</var>、<var>大安</var>、<var>二連</var>、<var>固安東</var>、<var>哈達铺</var>、<var>姜堰</var>、<var>陇南</var>、<var>南通</var>、<var>秦王川</var>、<var>三岔湖</var>、<var>圖们北</var>、<var>瓦房店</var>、<var>新民</var>、<var>姚渡</var>。</li>
           <li>記録した駅組 31 個、駅 868 個、機器 2648 個。</li>
         </ul>
       </li>
@@ -597,7 +604,7 @@
         2021-09-23(v3.0.7)
         <ul>
         <li>
-          新しい駅：<var>大板</var>、<var>定州東</var>、<var>贛榆</var>、<var>林東</var>、<var>戚墅堰</var>、<var>日照</var>、<var>日照西</var>、<var>桑根达来</var>、<var>通遼</var>、<var>宣化</var>、<var>宣化北</var>
+          新しい駅：<var>大板</var>、<var>定州東</var>、<var>贛榆</var>、<var>林東</var>、<var>戚墅堰</var>、<var>日照</var>、<var>日照西</var>、<var>桑根達来</var>、<var>通遼</var>、<var>宣化</var>、<var>宣化北</var>
         </li>
           <li>最近の二回の更新以来作った「新しい駅」にマークを付けています。</li>
         </ul>
@@ -719,7 +726,7 @@
         2021-05-27(v2.3.10)
         <ul>
           <li>新しい駅：<var>贺胜橋東</var></li>
-          <li>车站总数达到500个。</li>
+          <li>記録した駅は500個達成。</li>
         </ul>
       </li>
       <li class="list-group-item">
@@ -782,7 +789,7 @@
         2021-04-05(v2.3.3)
         <ul>
           <li>
-            新しい駅：<var>八达嶺長城</var>、<var>海拉爾</var>
+            新しい駅：<var>八達嶺長城</var>、<var>海拉爾</var>
           </li>
         </ul>
       </li>
