--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -8,11 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="keyword" content="运转大数据">
   <meta name="description" content="运转大数据，售票机使用体验">
-  <!--Polyfills BEGIN--><!--
-  <script nomodule src="https://cdn.staticfile.net/es5-shim/4.6.7/es5-shim.min.js"></script>
-  <script nomodule src="https://cdn.staticfile.net/es5-shim/4.6.7/es5-sham.min.js"></script>-->
-  <!--Polyfills END-->
-  <!--<link rel="stylesheet" href="./js/bootstrap.min.css">-->
   <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <link rel="preload" href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.0/js/solid.min.js" type="text/javascript" as="script">
   <link rel="preload" href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.0/js/brands.min.js" type="text/javascript" as="script">
@@ -54,7 +49,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 6 月 30 日版本</a></p>
+    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 7 月 31 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -89,8 +84,8 @@
       <tr><td>2</td><td>南京南</td><td>57</td><td>86</td></tr>
       <tr><td>3</td><td>长春</td><td>55</td><td>71</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>73</td></tr>
-      <tr><td>5</td><td>北京南</td><td>50</td><td>60</td></tr>
-      <tr><td>6</td><td>北京西</td><td>39</td><td>50</td></tr>
+      <tr><td>5</td><td>北京南</td><td>51</td><td>61</td></tr>
+      <tr><td>6</td><td>北京西</td><td>40</td><td>53</td></tr>
       <tr><td>7</td><td>盐城</td><td>38</td><td>50</td></tr>
       <tr><td>8</td><td>杭州东</td><td>36</td><td>42</td></tr>
       <tr><td>9</td><td>兰州</td><td>32</td><td>46</td></tr>
@@ -139,10 +134,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-07-17 (v3.8.26)
+        2024-07-31 (v3.8.27)
         <ul>
-          <li>新增车站：<var>东丰</var>、<var>东环</var>、<var>甘洛南</var>、<var>官桥北</var>、<var>开福寺</var>、<var>泥溪</var>、<var>山海关</var>、<var>新化</var>、<var>兴文</var>、<var>越西</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 902 个，机器数量达 2754 台。</li>
+          <li>新增车站：<var>保定</var>、<var>北滘西</var>、<var>红果</var>、<var>江北机场</var>、<var>顺德北</var>、<var>武隆</var>、<var>扬州东</var>、<var>银花</var>、<var>岳阳</var>、<var>张槎</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 912 个，机器数量达 2772 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
